# cmake_guide

./: .gitignore
hello_world/: CMakeLists.txt  README.md  my_hello_world.cpp
static_and_shared/: CMakeLists.txt  README.md  message.cpp  test.cpp
static_and_shared/include/: message.hpp
